<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">quick sampler</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Hello world!</string>
   <string name="Recording">Android Audio Recording Application</string>
   <string name="start">start</string>
   <string name="stop">stop</string>
   <string name="reset">reset</string>
   <string name="play">play</string>
   <string name="playHi">playHi</string>

</resources>