<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="start"
       android:text="@string/start"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"/>

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="stop"
       android:text="@string/stop"
       android:layout_alignParentTop="true"
       android:layout_toRightOf="@+id/button1"/>

   <Button
       android:id="@+id/button3"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="play"
       android:text="@string/play"
       android:layout_alignParentBottom="true"
       android:layout_toRightOf="@+id/button2"
       android:layout_marginLeft="83dp"
       android:layout_marginBottom="85dp"/>

   <Button
       android:id="@+id/resetButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="reset"
       android:text="@string/reset"
       android:layout_alignBottom="@+id/button2"
       android:layout_alignRight="@+id/button3"/>

   <Button
       style="?android:attr/buttonStyleSmall"
       android:id="@+id/playHiButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/playHi"
       android:layout_marginLeft="54dp"
       android:layout_alignTop="@+id/button3"
       android:layout_toRightOf="@+id/button3"/>

</RelativeLayout>